# A1-QP-MPC-Controller

src/a1_cpp/: CMakeLists.txt
src/a1_cpp/src/: A1CtrlStates.h  A1RobotControl.h  GazeboA1ROS.cpp  GazeboA1ROS.h  MainGazebo.cpp
